# formula-compiler

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: cmake.yml
docs/: basic-compiler.md  basic-formula.txt  basic-interpreter.md  basic-parser.md  compiler-directives.md  extended-compiler.md  extended-formulas.md  extended-glsl-emitter.md  extended-interpreter.md  extended-parameter-interpreter.md  extended-parameters.md  extended-semantics.md  file-entry.md  glsl-emitter.md  gradient-grammar.txt  gradient-plan.md  id.txt  l-system-parser.md  parser-dialects.md  parser-gaps.md  section-parser.md  semantic-analyzer.md  test-gaps.md  todo.md
docs/uf6/: arrays.txt  casting.txt  classes.txt  coloring-algorithms.txt  common-ulb-file.txt  conditionals.txt  constants.txt  constructors.txt  direct-coloring-algorithms.txt  dynamic-arrays.txt  expressions.txt  fields.txt  formula-files-and-entries.txt  formulas.txt  function-arguments.txt  functions.txt  global-section.txt  helpfile-setting.txt  image-class.txt  image-parameters.txt  importing-classes.txt  inheritance.txt  loops.txt  magn-setting.txt  maxiter-setting.txt  member-visibility.txt  memory-management.txt  merging-functions.txt  methods.txt  objects.txt  operators.txt  overriding.txt  parameter-blocks.txt  parameter-files.txt  parameter-forwards.txt  parameters.txt  perturb-setting.txt  perturbation-equations.txt  plug-in-parameters.txt  precision-setting.txt  (+20 more)
docs/uf6/animation/: animate-mode.txt  animating-gradients.txt  animating-layers.txt  animating-locations.txt  animating-parameters.txt  animation-bar.txt  animation-keys.txt  animation.txt  creating-animations.txt  editing-animations.txt  exponential-interpolation.txt  interpolation.txt  playing-animations.txt  time-settings.txt  timeline.txt
docs/uf6/colorings/: basic.txt  binary-decomposition.txt  decomposition.txt  direct-orbit-traps.txt  distance-estimator.txt  emboss.txt  exponential-smoothing.txt  gaussian-integer.txt  gradient.txt  image.txt  lighting.txt  none.txt  orbit-traps.txt  plug-in-coloring.txt  smooth.txt  triangle-inequality-average.txt
docs/uf6/functions/: abs.txt  acos.txt  acosh.txt  alpha.txt  asin.txt  asinh.txt  atan.txt  atan2.txt  atanh.txt  blue.txt  cabs.txt  (+42 more)
examples/: CMakeLists.txt
examples/glsl-renderer/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt  Compiler.cpp  Compiler.h  Complex.cpp  ExtendedInterpreter.cpp  ExtendedRuntime.cpp  FileEntry.cpp  Formula.cpp  FormulaEntry.cpp  GLSLEmitter.cpp  Gradient.cpp  Interpreter.cpp  Interpreter.h  Lexer.cpp  Node.cpp  Parameter.cpp  Parser.cpp  Parser.h  Preprocessor.cpp  ReferenceCollector.cpp  SemanticAnalyzer.cpp  Simplifier.cpp  Value.cpp  Visitor.cpp  Visitor.h  ast.cpp  ast.h  descent.cpp  descent.h  formula.cpp  functions.cpp  functions.h  parser.cpp  parser.h
libs/compiler/: CMakeLists.txt  Compiler.cpp
libs/compiler/include/formula/compiler/: Compiler.h
libs/core/: CMakeLists.txt  Complex.cpp  FileEntry.cpp  Node.cpp  Section.cpp  Value.cpp  functions.cpp
libs/core/include/formula/core/: Complex.h  FileEntry.h  Node.h  NodeTyper.h  Section.h  SourceLocation.h  Value.h  Visitor.h  functions.h
libs/facade/: CMakeLists.txt  Formula.cpp
libs/facade/include/formula/facade/: Formula.h
libs/include/formula/: Compiler.h  Complex.h  Dialect.h  ExtendedInterpreter.h  ExtendedRuntime.h  FileEntry.h  Formula.h  FormulaEntry.h  GLSLEmitter.h  Gradient.h  Interpreter.h  Lexer.h  Node.h  NodeTyper.h  Parameter.h  ParseOptions.h  Parser.h  Preprocessor.h  ReferenceCollector.h  SemanticAnalyzer.h  Simplifier.h  SourceLocation.h  Value.h  Visitor.h  formula.h
libs/interpreter/: CMakeLists.txt  ExtendedInterpreter.cpp  ExtendedRuntime.cpp  Interpreter.cpp
libs/interpreter/include/formula/interpreter/: ExtendedInterpreter.h  ExtendedRuntime.h  Interpreter.h
libs/parser/: CMakeLists.txt  FormulaEntry.cpp  Gradient.cpp  Lexer.cpp  Parameter.cpp  Parser.cpp  Preprocessor.cpp
libs/parser/include/formula/parser/: FormulaEntry.h  Gradient.h  Lexer.h  Parameter.h  ParseOptions.h  Parser.h  Preprocessor.h
libs/semantics/: CMakeLists.txt  ReferenceCollector.cpp  SemanticAnalyzer.cpp  Simplifier.cpp
libs/semantics/include/formula/semantics/: ReferenceCollector.h  SemanticAnalyzer.h  Simplifier.h
libs/translator/: CMakeLists.txt  GLSLEmitter.cpp
libs/translator/include/formula/translator/: GLSLEmitter.h
tests/: CMakeLists.txt  ExpressionParam.cpp  ExpressionParam.h  ExtendedInterpreter-test.cpp  ExtendedRuntime-test.cpp  FileEntry-test.cpp  FormulaEntry-test.cpp  FormulaEntry.h  Gradient-test.cpp  NodeFormatter.cpp  NodeFormatter.h  Parameter-test.cpp  Preprocessor-test.cpp  SemanticAnalyzer-test.cpp  Value-test.cpp  compile-test.cpp  descent-compile-test.cpp  descent-interpreter-test.cpp  descent-test.cpp  formula-data-test.cpp  formula-data.h  formula-test.cpp  function-call.cpp  function-call.h  generate-formula-data.cmake  generate-formula-data.cpp  interpret-test.cpp  interpreter-test.cpp  lexer-test.cpp  node-builders.h  parse-id-formulas-test.cpp  parse-test.cpp  simplifier-test.cpp  trim_ws.cpp  trim_ws.h
tests/compiler/: CMakeLists.txt  compile-test.cpp
tests/core/: CMakeLists.txt  FileEntry-test.cpp  Section-test.cpp
tests/data/: rainbow.ugr
tests/facade/: CMakeLists.txt  id.frm  parse-id-formulas-test.cpp
tests/interpreter/: CMakeLists.txt  interpreter-test.cpp
tests/parser/: CMakeLists.txt  FormulaEntry-test.cpp  Gradient-test.cpp  Parameter-test.cpp  lexer-test.cpp  parse-test.cpp
tests/semantics/: CMakeLists.txt  SemanticAnalyzer-test.cpp  simplifier-test.cpp
tests/translator/: CMakeLists.txt  GLSLEmitter-test.cpp
tests/util/: CMakeLists.txt  ExpressionParam.cpp  NodeFormatter.cpp  function-call.cpp  trim_ws.cpp
tests/util/include/formula/test/: ExpressionParam.h  node-builders.h
tools/: CMakeLists.txt  main.cpp
tools/formula-compiler/: main.cpp
tools/formula-validator/: CMakeLists.txt  main.cpp
(+86 files in other folders)
